# email-alerts

./: Cargo.toml  Dockerfile  build.rs
.github/workflows/: release.yml
proto/: ClientCredentialsFlows.proto  EmailAlerts.proto  SendGridBridge.proto
src/: lib.rs  main.rs  settings.rs
src/app_ctx/: app_ctx.rs
src/grpc_client/: client_credentials_grpc.rs  mod.rs  sendgrid_bridge_grpc_client.rs
src/grpc_server/: alerts_grpc_service.rs  mod.rs  server.rs
